--- a/client/templates/eventsDemo.html
+++ b/client/templates/eventsDemo.html
@@ -1,8 +1,8 @@
-<template name="eventsDemo">
+<!-- <template name="eventsDemo">
   {{#Modifier}}
     {{#Surface}}
       <div class="ballBorder"></div>
     {{/Surface}}
     {{>Surface template='springBall' size="[100,100]" translate="[50,50,90]"}}
   {{/Modifier}}
-</template>
+</template> -->
